# Code-Eli

./: CMakeLists.txt
cmake/: DetermineDateTime.cmake  code_eli.hpp.in
example/airfoil_fit/: CMakeLists.txt
example/vsp_pod/: CMakeLists.txt
include/eli/constants/: math.hpp
include/eli/geom/: intersect.hpp
include/eli/util/: clamp.hpp  tolerance.hpp
test/constants/: CMakeLists.txt  constants_math_test.cpp
test/geom/: CMakeLists.txt
test/geom/bezier_curve/: CMakeLists.txt  bezier_curve_fit_test.cpp  bezier_curve_fit_test_suite.hpp  bezier_curve_test.cpp  bezier_curve_test_suite.hpp
test/geom/bezier_surface/: CMakeLists.txt  bezier_surface_test.cpp  bezier_surface_test_suite.hpp
test/geom/bounding_box/: CMakeLists.txt  bounding_box_test.cpp
test/geom/fit_container/: CMakeLists.txt  fit_container_test.cpp  fit_container_test_suite.hpp
test/geom/intersect_segment/: CMakeLists.txt  intersect_segment_surface_test_suite.hpp  intersect_segment_test.cpp  intersect_segment_triangle_test_suite.hpp
test/geom/minimum_distance/: CMakeLists.txt  minimum_distance_surface_test_suite.hpp  minimum_distance_test.cpp
test/geom/piecewise_curve/: CMakeLists.txt  piecewise_binary_cubic_creator_test_suite.hpp  piecewise_binary_cubic_cylinder_projector_test_suite.hpp  piecewise_circle_creator_test_suite.hpp  piecewise_cst_airfoil_creator_test_suite.hpp  piecewise_curve_creator_test.cpp  piecewise_curve_test.cpp  piecewise_curve_test_suite.hpp  piecewise_four_digit_creator_test_suite.hpp  piecewise_general_creator_test_suite.hpp  piecewise_polygon_creator_test_suite.hpp  piecewise_pseudo_creator_test.cpp  piecewise_superellipse_creator_test_suite.hpp
test/geom/piecewise_surface/: CMakeLists.txt  piecewise_surface_creator_test.cpp  piecewise_surface_test.cpp  piecewise_surface_test_suite.hpp  piecewise_uniform_skinning_surface_creator_test_suite.hpp
test/util/: CMakeLists.txt  floating_point_test.cpp  floating_point_test_suite.hpp  tolerance_test.cpp  traits_test.cpp
(+88 files in other folders)
